[package]
name = "giphy_search"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'
strip = true

[dependencies]
clipboard-win = "4.4.2"
getopts = "0.2.21"
giphy = "0.4.1"
rand = "0.8.5"
reqwest = "0.11.11"
