[package]
name = "giphyc"
version = "0.2.0"
edition = "2021"
default-run = "giphyc"

[[bin]]
name = "giphyc"
path = "src/main.rs"

[[bin]]
name = "giphyg"
path = "src/mainui.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'
strip = true

[dependencies]
clipboard-win = "4.4.2"
druid = "0.7.0"
getopts = "0.2.21"
giphy = "0.4.1"
rand = "0.8.5"
reqwest = "0.11.11"
